--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" >
   </head>
   <body>
-    <header class="container">
+    <header class="container-wrapper"><div class="container">
    <a class="webstudio" href="./index.html"><span class="logo">Web</span><span class="logo2">Studio</span></a>
       <nav class="header">
         <ul class=" list">
@@ -38,7 +38,7 @@
             <a class="contact" href="tel:+48111111111">+48 111 111 111</a>
           </li>
         </ul>
-      </div>
+      </div></div>
     </header>
 
     <main>
@@ -148,7 +148,7 @@
     </main>
 
     <footer class="down_footer">
-      <a class="webstudio" href="/"><span class="logo">Web</span><span class="logo3">Studio</span></a>
+      <a class="webstudio1" href="/"><span class="logo">Web</span><span class="logo3">Studio</span></a>
       <address class="adress">Warszawa, Aleje Jerozolimskie 21</address>
         
       <ul class=" list2">
