--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="container">
+    <header class="container-wrapper"><div class="container">
     <a class="webstudio" href="/index.html"><span class="logo">Web</span><span class="logo2">Studio</span></a>
     <nav class="header">
         <ul class=" list">
@@ -31,7 +31,7 @@
             <ul class="list" >
                <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
                 <li><a class="contact"  href="tel:+48111111111">+48 111 111 111</a></li>
-            </ul>
+            </ul></div> 
 </header>
 <main>
 <section class="sekcja1"><h1>EFEKTYWNE ROZWIĄZANIA <br> DLA WASZEGO BIZNESU</h1>
