--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="container-wrapper"><div class="container">
-    <a class="webstudio" href="/index.html"><span class="logo">Web</span><span class="logo2">Studio</span></a>
+    <header class="container"><div class="wrapper">
+
     <nav class="header">
+         <a class="webstudio" href="/index.html"><span class="logo">Web</span><span class="logo2">Studio</span></a>
         <ul class=" list">
             <li><a class="link" href="./index.html">Agencja</a></li>
             <li><a class="link" href="./portfolio.html">Portfolio</a></li> 
@@ -34,10 +35,10 @@
             </ul></div> 
 </header>
 <main>
-<section class="sekcja1"><h1>EFEKTYWNE ROZWIĄZANIA <br> DLA WASZEGO BIZNESU</h1>
-<button class="order" type="submit">Zamów usługe</button></section>
-<section class="container-two">
-     <ul class=" list">
+<section class= "container" ><div class="sekcja1"><h1>EFEKTYWNE ROZWIĄZANIA <br> DLA WASZEGO BIZNESU</h1>
+<button class="order" type="submit">Zamów usługe</button></div></section>
+<section>
+     <ul class=" list"><div class="ipsum-style">
     <li>
         <h2 class="lorem">LOREM IPSUM</h2>
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
@@ -57,11 +58,11 @@
         <h2 class="lorem">LOREM IPSUM</h2>
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada</p>
-    </li>
+    </li></div>
 </ul></section>
 <section >
     <h2 class="description">Czym się zajmujemy</h2>
-    <ul class="container-three">
+    <ul class="solution-style">
         <li>
             <img src="./images/1a.jpg" alt="rozwiazania dla biznesu" width="370" height="294">
         </li>
@@ -69,7 +70,7 @@
         <li><img src="./images/3a.jpg" alt="rozwiazania dla bisnesu" width="370" height="294"></li>
     </ul>
 </section>
-<section class="sekcja2">
+<section class="container" ><div class="sekcja2">
     <h2 class="description">Nasz zespół</h2>
     <ul class="list">
         <li class="face"><img src="./images/4a.jpg" alt="zdjecie John Doe" width="270" height="260">
@@ -83,16 +84,16 @@
         <li class="face"><img src="./images/7a.jpg" alt="zdjecie John Doe" width="270" height="260">
             <h3 class="name">John Doe</h3><h4 class="position">UI Designer</h4>
         </li>
-    </ul>
+    </ul></div>
 </section>
 </main>
-<footer class="down_footer">
+<footer class="container" ><div class="down_footer">
       <a class="webstudio1" href="/"><span class="logo">Web</span><span class="logo3">Studio</span></a>
       <address class="adress">Warszawa, Aleje Jerozolimskie 21</address>
           <ul  class="list2">
           <li><a class="kontakt_stopka" href="mailto:info@example.com">info@example.com</a></li>
           <li><a class="kontakt_stopka" href="tel:+48111111111">+48 111 111 111</a></li>
           </ul>
-  </footer>
+  </footer></div>
 </body>
 </html>
