--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,10 @@
     <link rel="stylesheet" href="./css/styles.css" >
   </head>
   <body>
-    <header class="container-wrapper"><div class="container">
-   <a class="webstudio" href="./index.html"><span class="logo">Web</span><span class="logo2">Studio</span></a>
+       <header class="container"><div class="wrapper">
+
       <nav class="header">
+         <a class="webstudio" href="./index.html"><span class="logo">Web</span><span class="logo2">Studio</span></a>
         <ul class=" list">
           <li><a class="link" href="./index.html">Agencja</a></li>
           <li><a class="link" href="./portfolio.html">Portfolio</a></li>
@@ -42,8 +43,8 @@
     </header>
 
     <main>
-      <section class="">
-        <ul  class=" list3">
+      <section  class="container">
+        <ul class=" list3">
           <li><button class="button" type="button">Wszystkie</button></li>
           <li><button class="button" type="button">Strony</button></li>
           <li><button class="button" type="button">Aplikacje</button></li>
@@ -147,7 +148,7 @@
       </section>
     </main>
 
-    <footer class="down_footer">
+<footer class="container" ><div class="down_footer">
       <a class="webstudio1" href="/"><span class="logo">Web</span><span class="logo3">Studio</span></a>
       <address class="adress">Warszawa, Aleje Jerozolimskie 21</address>
         
