--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             </ul></div> 
 </header>
 <main>
-<section class= "container" ><div class="sekcja1"><h1>EFEKTYWNE ROZWIĄZANIA <br> DLA WASZEGO BIZNESU</h1>
-<button class="order" type="submit">Zamów usługe</button></div></section>
-<section>
-     <ul class=" list"><div class="ipsum-style">
+<section class="section" ><div class= "container" ><div class="sekcja1"><h1>EFEKTYWNE ROZWIĄZANIA <br> DLA WASZEGO BIZNESU</h1>
+<button class="order" type="submit">Zamów usługe</button></div></div></section>
+<section class="section"><div class="container"><div class="ipsum-style">
+     <ul class=" list">
     <li>
         <h2 class="lorem">LOREM IPSUM</h2>
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
@@ -58,9 +58,9 @@
         <h2 class="lorem">LOREM IPSUM</h2>
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada</p>
-    </li></div>
-</ul></section>
-<section >
+    </li>
+</ul></div></div></section>
+<section class="section"><div class="container">
     <h2 class="description">Czym się zajmujemy</h2>
     <ul class="solution-style">
         <li>
@@ -69,8 +69,8 @@
         <li><img src="./images/2a.jpg" alt="rozwiazania dla bisnesu" width="370" height="294"></li>
         <li><img src="./images/3a.jpg" alt="rozwiazania dla bisnesu" width="370" height="294"></li>
     </ul>
-</section>
-<section class="container" ><div class="sekcja2">
+</div></section>
+<section class="section"><div class="container" ><div class="sekcja2">
     <h2 class="description">Nasz zespół</h2>
     <ul class="list">
         <li class="face"><img src="./images/4a.jpg" alt="zdjecie John Doe" width="270" height="260">
@@ -84,7 +84,7 @@
         <li class="face"><img src="./images/7a.jpg" alt="zdjecie John Doe" width="270" height="260">
             <h3 class="name">John Doe</h3><h4 class="position">UI Designer</h4>
         </li>
-    </ul></div>
+    </ul></div></div> 
 </section>
 </main>
 <footer class="container" ><div class="down_footer">
