--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-      <section  class="container">
+      <section class="section" ><div class="container">
         <ul class=" list3">
           <li><button class="button" type="button">Wszystkie</button></li>
           <li><button class="button" type="button">Strony</button></li>
@@ -144,7 +144,7 @@
               <h4 class="typ">Aplikacja</h4>
             </li>
           </ul>
-        </div>
+        </div></div> 
       </section>
     </main>
 
