--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </ul></div> 
 </header>
 <main>
-<section class="section" ><div class= "container" ><div class="sekcja1"><h1>EFEKTYWNE ROZWIĄZANIA <br> DLA WASZEGO BIZNESU</h1>
-<button class="order" type="submit">Zamów usługe</button></div></div></section>
+<section><div class="backgroundorder"><div class= "container" ><div class="sekcja1"><h1>EFEKTYWNE ROZWIĄZANIA <br> DLA WASZEGO BIZNESU</h1>
+<button class="order" type="submit">Zamów usługe</button></div></div></div></section>
 <section class="section"><div class="container"><div class="ipsum-style">
      <ul class=" list">
     <li>
@@ -70,8 +70,8 @@
         <li><img src="./images/3a.jpg" alt="rozwiazania dla bisnesu" width="370" height="294"></li>
     </ul>
 </div></section>
-<section class="section"><div class="container" ><div class="sekcja2">
-    <h2 class="description">Nasz zespół</h2>
+<section class="backgroundteam"><div class="section"><div class="container"><div class="sekcja2">
+    <h2 class="description1">Nasz zespół</h2>
     <ul class="list">
         <li class="face"><img src="./images/4a.jpg" alt="zdjecie John Doe" width="270" height="260">
             <h3 class="name">John Doe</h3> <h4 class="position">Designer</h4></li>
@@ -84,16 +84,16 @@
         <li class="face"><img src="./images/7a.jpg" alt="zdjecie John Doe" width="270" height="260">
             <h3 class="name">John Doe</h3><h4 class="position">UI Designer</h4>
         </li>
-    </ul></div></div> 
+    </ul></div></div></div>
 </section>
 </main>
-<footer class="container" ><div class="down_footer">
+<footer><div class="container" ><div class="down_footer">
       <a class="webstudio1" href="/"><span class="logo">Web</span><span class="logo3">Studio</span></a>
       <address class="adress">Warszawa, Aleje Jerozolimskie 21</address>
           <ul  class="list2">
           <li><a class="kontakt_stopka" href="mailto:info@example.com">info@example.com</a></li>
           <li><a class="kontakt_stopka" href="tel:+48111111111">+48 111 111 111</a></li>
           </ul>
-  </footer></div>
+  </footer></div></div>
 </body>
 </html>
