--- a/portfolio.html
+++ b/portfolio.html
@@ -148,7 +148,7 @@
       </section>
     </main>
 
-<footer class="container" ><div class="down_footer">
+<footer><div class="container" ><div class="down_footer">
       <a class="webstudio1" href="/"><span class="logo">Web</span><span class="logo3">Studio</span></a>
       <address class="adress">Warszawa, Aleje Jerozolimskie 21</address>
         
@@ -161,7 +161,7 @@
         <li>
           <a class="kontakt_stopka" href="tel:+48111111111">+48 111 111 111</a>
         </li>
-      </ul>
+      </ul></div>
     </footer>
   </body>
 </html>
