--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
 <button class="order" type="submit">Zamów usługe</button></div></div></div></section>
 <section class="section"><div class="container"><div class="ipsum-style">
      <ul class=" list">
-    <li>
+    <li class="sizelorem">
+        <h2 class="lorem">LOREM IPSUM</h2>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
+            malesuada</p>
+    </li >
+    <li class="sizelorem">
         <h2 class="lorem">LOREM IPSUM</h2>
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada</p>
     </li>
-    <li>
+    <li class="sizelorem">
         <h2 class="lorem">LOREM IPSUM</h2>
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada</p>
     </li>
-    <li>
-        <h2 class="lorem">LOREM IPSUM</h2>
-        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
-            malesuada</p>
-    </li>
-    <li>
+    <li class="sizelorem">
         <h2 class="lorem">LOREM IPSUM</h2>
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
             malesuada</p>
