--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <main>
 <section><div class="backgroundorder"><div class= "container" ><div class="sekcja1"><h1>EFEKTYWNE ROZWIĄZANIA <br> DLA WASZEGO BIZNESU</h1>
 <button class="order" type="submit">Zamów usługe</button></div></div></div></section>
-<section class="section"><div class="container"><div class="ipsum-style">
+<section class="advantages"><div class="container"><div class="ipsum-style">
      <ul class=" list">
     <li class="sizelorem">
         <h2 class="lorem">LOREM IPSUM</h2>
